--- a/main/templates/main/mainpage.html
+++ b/main/templates/main/mainpage.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ultra:wght@400&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=NEXON+Lv2+Gothic:wght@400&display=swap" />
     <link rel="stylesheet" href="{% static 'css/hello.css' %}">
-    <style>
+    <style>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
         /* 이미지 경로 수정 */
         .notch-1 {
             background: url("{% static 'img/f9358ade-fc06-47e3-a21a-154850a2cd61.png' %}") no-repeat center;
@@ -106,11 +106,11 @@
             <div class="line"></div>
             <div class="goals">
               <span class="checkbox">□ </span
-              ><span class="goal-1">목<br /></span
+              ><span class="goal-1">아코톤 참가<br /></span
               ><span class="checkbox-4">□ </span
-              ><span class="goal-1-5">목표 2<br /></span
+              ><span class="goal-1-5">수업 내용 복습<br /></span
               ><span class="checkbox-6">□ </span
-              ><span class="goal-1-7">목표 3<br /></span>
+              ><span class="goal-1-7">스터디 가입<br /></span>
             </div>
           </div>
         </div>
@@ -121,7 +121,7 @@
               <div class="line-a"></div>
               <div class="line-b"></div>
             </div>
-            <span class="activity-list">활동1<br />활동2<br />활동3</span>
+            <span class="activity-list">- 아코톤 프로젝트<br />- 수업 프로젝트<br />- 동아리 프로젝트</span>
           </div>
         </div>
       </div>
