--- a/todo/templates/todo/todo.html
+++ b/todo/templates/todo/todo.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ultra:wght@400&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=NEXON+Lv2+Gothic:wght@400&display=swap" />
     <link rel="stylesheet" href="{% static 'css/todo/style.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap">
     <style>
         /* 이미지 경로 수정 */
         .notch-1 {
