--- a/static/css/todo/style.css
+++ b/static/css/todo/style.css
@@ -161,11 +161,13 @@ button {
   align-items: center;
   margin-left: 30px;
   margin-bottom: 10px;
+  font-family: 'Noto Sans KR', sans-serif; /* 고딕 폰트 설정 */
 }
 .todo-items {
   max-height: 300px; /* 할 일 목록 영역 최대 높이 */
   overflow-y: auto; /* 스크롤 가능하도록 */
   padding-left: 20px;
+  font-family: 'Noto Sans KR', 'Apple SD Gothic Neo', 'Malgun Gothic', '돋움', sans-serif;
 }
 .todo-item input[type="checkbox"] {
   margin-right: 30px;
@@ -173,6 +175,8 @@ button {
 
 .todo-item label {
   font-size: 18px;
+  color: #555;
+  font-family: 'Noto Sans KR', sans-serif; /* 고딕 폰트 설정 */
 }
 
 .todo-category {
@@ -181,6 +185,7 @@ button {
   align-items: center;
   font-size: 20px;
   font-weight: bold;
+  font-family: 'Noto Sans KR', 'Apple SD Gothic Neo', 'Malgun Gothic', '돋움', sans-serif;
   margin-bottom: 10px;
   margin-left: 35px;
   padding-bottom: 5px;
@@ -193,16 +198,16 @@ button {
   color: #fff;
   border: none;
   border-radius: 50%;
-  width: 30px; /* Increase button size */
-  height: 30px; /* Increase button size */
-  font-size: 35px; /* Increase font size */
+  width: 30px; /* 버튼 크기 증가 */
+  height: 30px; /* 버튼 크기 증가 */
+  font-size: 30px; /* 글자 크기 조절 */
+  line-height: 40px; /* 버튼 높이와 동일하게 설정하여 중앙 정렬 */
   cursor: pointer;
-  margin-left: -2000px; /* Move button slightly to the left */
-  display: flex; /* Center the text */
-  align-items: center; /* Center vertically */
-  justify-content: center; /* Center horizontally */
+  display: flex; /* 텍스트 가운데 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */
+  justify-content: center; /* 수평 가운데 정렬 */
   position: relative;
-  left: -15px;
+  left: -15px; /* 버튼을 왼쪽으로 약간 이동 */
 }
 
 .under {
